add readme (and some extra changes)
