# server/controllers/auth.controller.js
@@ -7,6 +7,12 @@ const authRegister = async (req, res) => {
 	const { first_name, last_name, patronymic, login, password } = req.body;
 
 	try {
+		const userWithBodyLogin = await User.findOne({ where: { login } });
+
+		if (!!userWithBodyLogin) {
+			return res.status(400).json({ message: "This login is already busy" });
+		}
+        
 		const hashedPassword = await bcrypt.hash(password, 10);
 		const newUser = await User.create({ first_name, last_name, patronymic, login, password: hashedPassword });
 
@@ -26,7 +32,7 @@ const authLogin = async (req, res) => {
 		const user = await User.findOne({ where: { login } });
 
 		if (!user) {
-			return res.status(400).json({ message: "User not found" });
+			return res.status(404).json({ message: "User not found" });
 		}
 
 		const isPasswordValid = await bcrypt.compare(password, user.password);
